tools/tests/errors/surf_lex_14.experr
error: f-string '{...}' must contain a single expression